Improvements on Scala project Fixed signature of CalcolaMax in exam solution

--- a/Documentazione progetto/Capitoli/CorrezioneProva.tex
+++ b/Documentazione progetto/Capitoli/CorrezioneProva.tex
@@ -83,7 +83,7 @@ Rispetto alla soluzione proposta in prova, sono andato a snellire il metodo \tex
 \end{figure}
 
 \section{EXE 5 - Visitor}
-Durante la prova avevo inserito anche il Visitor anche per le \textit{FigureGeometriche} astratte: questo perchè nel metodo \textit{calcolaMax} andavo a chiamare la funzione \textit{visit} invece che \textit{accept}, il chè quindi mi ha portato ad inserire il visitor anche per la classe astratta.
+Durante la prova avevo inserito il Visitor anche per le \textit{FigureGeometriche} astratte: questo perchè nel metodo \textit{calcolaMax} andavo a chiamare la funzione \textit{visit} invece che \textit{accept}, il chè quindi mi ha portato ad inserire il visitor anche per la classe astratta.
 
 Ho corretto quindi il metodo \textit{calcolaMax} come si vede in figura ~\ref{fig:calcolaMax}.
 
@@ -94,6 +94,7 @@ Ho corretto quindi il metodo \textit{calcolaMax} come si vede in figura ~\ref{fi
 	\label{fig:calcolaMax}
 \end{figure}
 
+Ho inoltre corretto anche la segnatura del metodo.
 \section{EXE 6 - Scala}
 Nella correzione della prova di Scala sono andata ad inserire il wrapper, come si vede in figura ~\ref{fig:scalaWrap}: ho sfruttato la possibilità che Scala offre di definire funzioni \textit{inline}.
 
