--- a/Documentazione progetto/Capitoli/ASM.tex
+++ b/Documentazione progetto/Capitoli/ASM.tex
@@ -1,19 +1,20 @@
 \section{Descrizione del progetto}
-Per quanto riguarda la parte di ASM  \textit{ASM} si è deciso di riprendere un esempio visto in classe (e durante le pause), ovvero quello relativo alla \textit{\textbf{Coffee machine}}, che affiancherà il distributore di bevande energetiche progettato in Scala.
-In particolare si è definito l'applicazione su una serie di specifiche, quali:
+Per quanto riguarda la parte di \textit{ASM} si è deciso di riprendere un esempio visto in classe (e durante le pause caffè, molto amate da noi studenti), ovvero quello relativo alla \textit{\textbf{Coffee machine}}, che affiancherà il distributore di bevande energetiche progettato in Scala.
+
+In particolare l'applicazione è stata definita basandosi su una serie di specifiche, quali:
 \begin{itemize}
-	\item Il distributore modellato può preparare diversi tipi di bevande (caffè, cappuccino etc), ognuna delle quali è preparata con diverse quantità di ingredienti (acqua, caffè, latte etc) i quali vengono consumati dagli utenti e reintegrati dal manutentore.
-	\item Il distributore accetta pagamenti solamente in moneta tramite l'inserimento di denaro nell'apposita fessura.
-	\item Il distributore è in grado di fornire il resto (anche se non sempre in modo esatto)
+	\item Il distributore modellato può preparare diverse tipologie di bevande (caffè, cappuccino etc), ognuna delle quali è preparata con diverse quantità di ingredienti (acqua, caffè, latte etc) i quali vengono consumati dagli utenti e reintegrati dal manutentore;
+	\item Il distributore accetta pagamenti solamente in moneta tramite l'inserimento di denaro nell'apposita fessura;
+	\item Il distributore è in grado di fornire il resto;
 	\item Quando tutte le bevande sono esaurite, il distributore va fuori servizio, in attesa che gli ingredienti vengano aggiunti dal manutentore, il quale può inoltre prelevare o inserire monete dal distributore, sempr etenendo conto del vincolo di capacità del vano porta monete
 \end{itemize}
 	
 
 \section{Macchina a stati}
-La ASM è basata su una sottostante macchina a stati finiti, mostrata in figura ~\ref{fig:StateMachine}, che definisce i principali stati e transizioni del distributore. 
-\begin{figure}[h]
+La ASM è basata su una macchina a stati finiti, mostrata in figura ~\ref{fig:StateMachine}, che definisce i principali stati e le principali transizioni che si possono verificare durante il funzionamento del distributore. 
+\begin{figure}[h!]
 	\centering
-	\includegraphics[width=0.8\textwidth]{Immagini/FSM.png}
+	\includegraphics[width=1\textwidth]{Immagini/FSM.png}
 	\caption{Macchina a stati}
 	\label{fig:StateMachine}
 \end{figure}
@@ -25,6 +26,7 @@ In particolare, è stato possibile memorizzare informazioni su:
 	\item Credito dell'utente attuale
 \end{itemize}
 
+\newpage
 \section{Eventi}
 La ASM sviluppata modella un sistema event-driven, ovvero un sistema in cui le transizioni da uno stato all’altro sono perlopiù scatenate da input dell’utente, mentre di solito la macchina si trova ferma in uno stato, in attesa di tali eventi.
 Nel codice della ASM questi eventi sono denominati action; ad ogni stato corrispondono una o più azioni che l’utente può compiere quando la macchina è in quello stato, le quali sono codificate come elementi di un dominio enumerativo, i quali essendo identificativi univoci, non possono essere duplicati, come si vede in figura ~\ref{fig:actionASM}.
