Reduced white pages

--- a/Documentazione progetto/BreveDocumentazione.tex
+++ b/Documentazione progetto/BreveDocumentazione.tex
@@ -115,24 +115,18 @@
 	% Auto-generated table of contents, list of figures and list of tables %
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\tableofcontents
-	\listoffigures
-	\listoftables
-	
+	\listoffigures	
 	\mainmatter
 	
 	
 	\mainmatter
-	\part{Primo progettino}
-	\chapter{Cyclone}
+	\chapter{I - Cyclone}
 	\input{Capitoli/Cyclone.tex}
-	\part{Secondo progettino}
-	\chapter{C++}
+	\chapter{II - C++}
 	\input{Capitoli/cpp.tex}
-	\part{Terzo progettino}
-	\chapter{Energy drink vending machine con Scala}
+	\chapter{III - Energy drink vending machine con Scala}
 	\input{Capitoli/Scala.tex}
-	\part{Quarto progettino}
-	\chapter{Coffe Machine con ASM}
+	\chapter{IV - Coffe Machine con ASM}
 	\input{Capitoli/ASM.tex}
 
 	\chapter{Correzione prova}
